[package]
name = "calculator"
version = "0.1.0"
edition = "2018"

[dependencies]
iced = { git = "https://github.com/hecrj/iced.git#63fc539a251b00333fb140717180b315b119c886" }
futures = "0.3.1"
env_logger = "0.7.1"
tokio = "0.1.22"
protobuf = "=2.8.1"
libp2p = "0.13.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "2.0"

[patch.crates-io]
ctr = { git = "https://github.com/koivunej/stream-ciphers.git", branch = "ctr128-64to128" }
