[package]
name = "ipfs"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[features]
default = []
all = ["rocksdb"]

[dependencies]
byteorder = "*"
cbor = { git = "https://github.com/dvc94ch/rust-cbor", branch = "read-data-item" }
cid = { git = "https://github.com/multiformats/rust-cid", branch = "master" }
domain = "*"
env_logger = "*"
failure = "*"
fnv = "*"
futures = { version = "0.3", features = [ "compat", "io-compat", "async-await" ] }
libp2p = "=0.13.2"
log = "*"
multibase = "*"
multihash = "0.8.0"
protobuf = "=2.8.1"
rand = "0.6"
rustc-serialize = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.1.21" }
tokio-fs = { version = "0.1" }
xdg = "*"
async-trait = "*"

rocksdb = { version = "*", optional = true }
